[gd_scene load_steps=17 format=3 uid="uid://k3ox8vfrwpor"]

[ext_resource type="Script" path="res://Scripts/AI/Enemy.gd" id="1_cr2fm"]
[ext_resource type="Texture2D" uid="uid://bnhwcsjrcfvk2" path="res://Sprites/Enemies/Slime/Slime1.png" id="2_hjgq3"]
[ext_resource type="Texture2D" uid="uid://cxbnuuubhbrw3" path="res://Sprites/Enemies/Slime/Slime2.png" id="3_7qiyo"]
[ext_resource type="Texture2D" uid="uid://bm35w1vdmduj6" path="res://Sprites/Enemies/Slime/Slime3.png" id="4_3cpg2"]
[ext_resource type="Texture2D" uid="uid://gum5rmac1vl1" path="res://Sprites/Enemies/Slime/Slime4.png" id="5_7rnnt"]
[ext_resource type="Texture2D" uid="uid://nf14qqp1vurp" path="res://Sprites/Enemies/Slime/Slime5.png" id="6_alupc"]
[ext_resource type="Texture2D" uid="uid://cfmnglt6dlq06" path="res://Sprites/Enemies/Slime/Slime6.png" id="7_e8tjc"]
[ext_resource type="Texture2D" uid="uid://4dtkpfgvlsfy" path="res://Sprites/Enemies/Slime/Slime7.png" id="8_tnlfy"]
[ext_resource type="Texture2D" uid="uid://sndcy2sam0pn" path="res://Sprites/Enemies/Slime/Slime8.png" id="9_1qu1e"]
[ext_resource type="Texture2D" uid="uid://dsflrm8meckbv" path="res://Sprites/Enemies/Slime/Slime9.png" id="10_nuy8x"]
[ext_resource type="Texture2D" uid="uid://bslt5yiwyc1mn" path="res://Sprites/Enemies/Slime/SlimeDefeated.png" id="11_t3yrs"]
[ext_resource type="Script" path="res://Scripts/State_Machine.gd" id="12_3rgsa"]
[ext_resource type="Script" path="res://Scripts/AI/Enemy_Chase_AI.gd" id="14_ups1x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3738"]
size = Vector2(50, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cjbo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hjgq3")
}, {
"duration": 1.0,
"texture": ExtResource("3_7qiyo")
}, {
"duration": 1.0,
"texture": ExtResource("4_3cpg2")
}, {
"duration": 1.0,
"texture": ExtResource("5_7rnnt")
}, {
"duration": 1.0,
"texture": ExtResource("6_alupc")
}, {
"duration": 1.0,
"texture": ExtResource("7_e8tjc")
}, {
"duration": 1.0,
"texture": ExtResource("8_tnlfy")
}, {
"duration": 1.0,
"texture": ExtResource("9_1qu1e")
}, {
"duration": 1.0,
"texture": ExtResource("10_nuy8x")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_t3yrs")
}],
"loop": true,
"name": &"defeated",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2rh5"]
size = Vector2(46, 20)

[node name="GreatSludge" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
scale = Vector2(3, 3)
collision_layer = 3
collision_mask = 19
script = ExtResource("1_cr2fm")
enemy_name = "GREAT SLUDGE"
is_boss = true
hp = 10
speed = 90
damage = 1
sprite = NodePath("AnimatedSprite2D")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_i3738")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_5cjbo")
animation = &"defeated"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_w2rh5")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("12_3rgsa")
initial_state = NodePath("Chasing")

[node name="Chasing" type="Node" parent="State Machine" node_paths=PackedStringArray("body", "atk_timer")]
script = ExtResource("14_ups1x")
body = NodePath("../..")
atk_timer = NodePath("../../Timer")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="State Machine/Chasing" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="State Machine/Chasing" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="State Machine/Chasing" method="_on_timer_timeout"]
